--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,12 +5,14 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+
+
     <EditText
-        android:id="@+id/etUsuario"
+        android:id="@+id/etEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Usuario" />
-
+        android:hint="Email"
+        android:inputType="textEmailAddress" />
     <EditText
         android:id="@+id/etContraseña"
         android:layout_width="match_parent"
@@ -24,47 +26,44 @@
         android:layout_height="wrap_content"
         android:hint="Nombre" />
 
-    <EditText
-        android:id="@+id/etEdad"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Edad"
-        android:inputType="number" />
-
-    <EditText
-        android:id="@+id/etEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Email"
-        android:inputType="textEmailAddress" />
-
-    <EditText
-        android:id="@+id/etInstagram"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Usuario de Instagram" />
-
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp"
+        android:gravity="center_horizontal">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="600px"
+            android:layout_height="600px"
+            android:src="@drawable/usuario"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:layout_gravity="center_horizontal"/>
+
+    </LinearLayout>
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="16dp">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="200px"
-            android:layout_height="200px"
-            android:src="@drawable/usuario"
-            android:scaleType="fitCenter"
-            android:adjustViewBounds="true"/>
-
         <Button
-            android:id="@+id/btnSeleccionarImagen"
+            android:id="@+id/fotoBoton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Seleccionar Imagen" />
+            android:text="Camara"
+            android:layout_weight="1" />
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/cargarFoto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Galeria"
+                android:layout_weight="1" />
+        </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -86,5 +85,4 @@
             android:layout_weight="1" />
 
     </LinearLayout>
-
 </LinearLayout>
