--- a/app/src/main/res/layout/pantalla_inicio_sesion.xml
+++ b/app/src/main/res/layout/pantalla_inicio_sesion.xml
@@ -30,15 +30,15 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/textUser"
+                android:id="@+id/textEmail"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:text="Usuario :"
+                android:text="Email :"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/user"
+                android:id="@+id/email"
                 android:layout_width="150dp"
                 android:layout_height="40dp"
                 />
